# process_files

./: .gitignore  pyproject.toml
src/: .env
src/process_files/: apps.py  models.py  serializers.py  tasks.py  views.py
src/process_files/migrations/: 0001_initial.py
src/src/: celery.py  settings.py  urls.py
src/uploads/: privileges.txt
